--- a/VieOnDemo/Main.storyboard
+++ b/VieOnDemo/Main.storyboard
@@ -434,14 +434,16 @@
         <!--Table View Controller-->
         <scene sceneID="qfo-FW-i8m">
             <objects>
-                <viewController storyboardIdentifier="ProfileUser" id="EmY-To-AJV" customClass="TableViewController" customModule="VieOnDemo" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ProfileUser" automaticallyAdjustsScrollViewInsets="NO" id="EmY-To-AJV" customClass="TableViewController" customModule="VieOnDemo" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ajv-xH-b7s">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="pd9-xG-Brm">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" allowsSelectionDuringEditing="YES" allowsMultipleSelection="YES" allowsMultipleSelectionDuringEditing="YES" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" id="pd9-xG-Brm">
                                 <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <sections/>
                                 <connections>
                                     <outlet property="dataSource" destination="EmY-To-AJV" id="Rq4-aP-E0P"/>
                                     <outlet property="delegate" destination="EmY-To-AJV" id="hFf-cJ-SuS"/>
