--- a/VieOnDemo/Cell/ProfileTableViewCell.xib
+++ b/VieOnDemo/Cell/ProfileTableViewCell.xib
@@ -10,71 +10,112 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ProfileTableViewCell" id="KGk-i7-Jjw" customClass="ProfileTableViewCell" customModule="VieOnDemo" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="50"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ProfileTableViewCell" rowHeight="139" id="KGk-i7-Jjw" customClass="ProfileTableViewCell" customModule="VieOnDemo" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="414" height="52"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="414" height="50"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+                <rect key="frame" x="0.0" y="0.0" width="414" height="52"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="nHX-6J-Fn6">
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="18" translatesAutoresizingMaskIntoConstraints="NO" id="D0g-bg-ZQr">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="50"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="un8-cg-GFr">
-                                <rect key="frame" x="16" y="15" width="20" height="20"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="20" id="lWL-od-U06"/>
-                                    <constraint firstAttribute="height" constant="20" id="yQk-5l-2Gv"/>
-                                </constraints>
-                            </imageView>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="3Sh-Lb-mou">
-                                <rect key="frame" x="52" y="0.0" width="362" height="50"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="250" translatesAutoresizingMaskIntoConstraints="NO" id="nHX-6J-Fn6">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="48"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eeV-hs-y5e">
-                                        <rect key="frame" x="0.0" y="10" width="362" height="15"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j2G-pS-RWu">
-                                        <rect key="frame" x="0.0" y="25" width="362" height="15"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                        <color key="textColor" red="0.53543822299999999" green="0.53543822299999999" blue="0.53543822299999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="un8-cg-GFr">
+                                        <rect key="frame" x="16" y="10" width="20" height="20"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="20" id="lWL-od-U06"/>
+                                            <constraint firstAttribute="height" constant="20" id="yQk-5l-2Gv"/>
+                                        </constraints>
+                                        <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="default"/>
+                                    </imageView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="3Sh-Lb-mou">
+                                        <rect key="frame" x="44" y="0.0" width="340" height="48"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eeV-hs-y5e">
+                                                <rect key="frame" x="0.0" y="4" width="340" height="22"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j2G-pS-RWu">
+                                                <rect key="frame" x="0.0" y="26" width="340" height="22"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                <color key="textColor" red="0.53543822299999999" green="0.53543822299999999" blue="0.53543822299999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstItem="eeV-hs-y5e" firstAttribute="top" secondItem="3Sh-Lb-mou" secondAttribute="top" constant="4" id="oGr-Ym-PnE"/>
+                                        </constraints>
+                                    </stackView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EnN-19-m0V">
+                                        <rect key="frame" x="384" y="10" width="30" height="20"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="20" id="4iG-Tb-IK4"/>
+                                            <constraint firstAttribute="width" constant="30" id="8fP-Zd-V60"/>
+                                        </constraints>
+                                        <color key="tintColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal" image="chevron.compact.right" catalog="system"/>
+                                    </button>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="bottom" secondItem="j2G-pS-RWu" secondAttribute="bottom" constant="10" id="0ks-At-16O"/>
-                                    <constraint firstItem="eeV-hs-y5e" firstAttribute="top" secondItem="3Sh-Lb-mou" secondAttribute="top" constant="10" id="pce-jo-dX5"/>
+                                    <constraint firstItem="3Sh-Lb-mou" firstAttribute="top" secondItem="nHX-6J-Fn6" secondAttribute="top" id="23g-Sm-ab6"/>
+                                    <constraint firstItem="EnN-19-m0V" firstAttribute="leading" secondItem="3Sh-Lb-mou" secondAttribute="trailing" id="4hq-eJ-mBl"/>
+                                    <constraint firstItem="un8-cg-GFr" firstAttribute="top" secondItem="nHX-6J-Fn6" secondAttribute="top" constant="10" id="KNp-zq-UPn"/>
+                                    <constraint firstItem="un8-cg-GFr" firstAttribute="leading" secondItem="nHX-6J-Fn6" secondAttribute="leading" constant="16" id="RF1-rm-0jY"/>
+                                    <constraint firstAttribute="height" constant="48" id="YUZ-zT-hWq"/>
+                                    <constraint firstItem="3Sh-Lb-mou" firstAttribute="leading" secondItem="un8-cg-GFr" secondAttribute="trailing" constant="8" symbolic="YES" id="b3n-lO-Gxo"/>
+                                    <constraint firstItem="EnN-19-m0V" firstAttribute="leading" secondItem="3Sh-Lb-mou" secondAttribute="trailing" id="sHY-sE-bfp"/>
+                                    <constraint firstAttribute="bottom" secondItem="3Sh-Lb-mou" secondAttribute="bottom" id="uWH-Gp-gUI"/>
                                 </constraints>
                             </stackView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LLB-M0-bll">
+                                <rect key="frame" x="10" y="46" width="394" height="2"/>
+                                <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="2" id="QIc-ce-pfY"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <constraints>
-                            <constraint firstItem="un8-cg-GFr" firstAttribute="top" secondItem="nHX-6J-Fn6" secondAttribute="top" constant="15" id="1m5-gG-5rR"/>
-                            <constraint firstItem="un8-cg-GFr" firstAttribute="leading" secondItem="nHX-6J-Fn6" secondAttribute="leading" constant="16" id="GlN-xF-o2a"/>
-                            <constraint firstItem="3Sh-Lb-mou" firstAttribute="top" secondItem="nHX-6J-Fn6" secondAttribute="top" id="PNz-xy-7aX"/>
-                            <constraint firstAttribute="bottom" secondItem="3Sh-Lb-mou" secondAttribute="bottom" id="TSa-Bd-Zlv"/>
-                            <constraint firstAttribute="bottom" secondItem="un8-cg-GFr" secondAttribute="bottom" constant="15" id="aPq-Ku-dmX"/>
-                            <constraint firstItem="3Sh-Lb-mou" firstAttribute="leading" secondItem="un8-cg-GFr" secondAttribute="trailing" constant="16" id="z0h-DY-eeQ"/>
+                            <constraint firstItem="nHX-6J-Fn6" firstAttribute="leading" secondItem="D0g-bg-ZQr" secondAttribute="leading" id="2EP-mG-CY5"/>
+                            <constraint firstAttribute="bottom" secondItem="LLB-M0-bll" secondAttribute="bottom" constant="2" id="CKA-Qp-6GX"/>
+                            <constraint firstAttribute="trailing" secondItem="nHX-6J-Fn6" secondAttribute="trailing" id="Gcy-ze-U9Y"/>
+                            <constraint firstAttribute="trailing" secondItem="LLB-M0-bll" secondAttribute="trailing" constant="10" id="YqB-37-4yg"/>
+                            <constraint firstItem="LLB-M0-bll" firstAttribute="leading" secondItem="D0g-bg-ZQr" secondAttribute="leading" constant="10" id="mor-72-ULy"/>
+                            <constraint firstAttribute="height" constant="50" id="wFm-ef-4Xl"/>
+                            <constraint firstItem="nHX-6J-Fn6" firstAttribute="top" secondItem="D0g-bg-ZQr" secondAttribute="top" id="wpY-RD-r95"/>
                         </constraints>
                     </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="nHX-6J-Fn6" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="VVe-0G-bOt"/>
-                    <constraint firstItem="nHX-6J-Fn6" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Xyh-uC-4j3"/>
-                    <constraint firstAttribute="bottom" secondItem="nHX-6J-Fn6" secondAttribute="bottom" id="joG-vd-rfQ"/>
-                    <constraint firstAttribute="trailing" secondItem="nHX-6J-Fn6" secondAttribute="trailing" id="yZr-Kk-uEg"/>
+                    <constraint firstAttribute="trailing" secondItem="D0g-bg-ZQr" secondAttribute="trailing" id="Ady-Nx-Hcp"/>
+                    <constraint firstAttribute="bottom" secondItem="D0g-bg-ZQr" secondAttribute="bottom" id="DWv-3l-q6F"/>
+                    <constraint firstItem="D0g-bg-ZQr" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="DaU-fI-x1c"/>
+                    <constraint firstItem="D0g-bg-ZQr" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="JAV-tI-1qi"/>
+                    <constraint firstAttribute="bottom" secondItem="D0g-bg-ZQr" secondAttribute="bottom" constant="1" id="zai-7x-Wjl"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <connections>
+                <outlet property="btnButton" destination="EnN-19-m0V" id="PDo-rK-MNl"/>
                 <outlet property="imageCell" destination="un8-cg-GFr" id="gPs-MR-hRN"/>
+                <outlet property="lblLabel" destination="LLB-M0-bll" id="mha-oh-ERa"/>
                 <outlet property="lblMail" destination="j2G-pS-RWu" id="cqp-Bm-Rl3"/>
                 <outlet property="lblName" destination="eeV-hs-y5e" id="Rbo-Fi-y27"/>
                 <outlet property="stackView" destination="3Sh-Lb-mou" id="gWY-I2-Cp1"/>
             </connections>
-            <point key="canvasLocation" x="200.00000000000003" y="68.638392857142847"/>
+            <point key="canvasLocation" x="200.00000000000003" y="97.767857142857139"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="chevron.compact.right" catalog="system" width="64" height="128"/>
+    </resources>
 </document>
